# XML_Read_Write

./: CMakeLists.txt  README.md  XML_ReadWrite.pro  main.cpp  mcu_stat.xml
ModifyXml/: CMakeLists.txt  Readme.md  main.cpp  text.pro  textxml.xml
XmlReadWrite/: CMakeLists.txt  Readme.md  Tag.xml  XML_ReadWrite.cpp  XML_ReadWrite.h  test.cpp  test.h
xmls/: NewData.xml  Tag.xml  sip_stat.xml
